# Prediction-Market-Intelligence-Agent

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  main.py  nixpacks.toml  pyproject.toml  railway.json
docs/: agent-research-pass.md  devlog.md
eval/: evaluator.py
schemas/: __init__.py
src/: cli.py  config.py  run_store.py  schemas.py
src/agents/: evidence_retriever.py  graph.py  market_analyzer.py  memo_writer.py  metrics.py  risk_critic.py
src/api/: app.py
src/api/routes/: agent.py  debug.py  eval.py  markets.py  memos.py
src/eval/: judge.py
src/ingestion/: normalizer.py  polymarket.py
src/retrieval/: reranker.py  search.py
src/storage/: db.py  models.py
src/utils/: secrets.py
tests/: test_agent.py  test_eval_judge.py  test_evidence_retriever.py  test_ingestion.py  test_memo_writer.py
tools/: market.py  risk.py  search.py
