[project]
name = "prediction-market-intelligence-agent"
version = "0.1.0"
description = "Prediction Market Intelligence Agent — portfolio project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.30",
    "tenacity>=8.3.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "anthropic>=0.34.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "tavily-python>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    "psycopg2-binary>=2.9.9",
    "rank-bm25>=0.2.2",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]
